缓存静态文件key修改，导致读取不到缓存信息。逻辑无法执行，定时器一直循环。修复

--- a/优化网站设计/34.md
+++ b/优化网站设计/34.md
@@ -1,1 +1,5 @@
 优化网站设计（三十四）：将组件直接打包到页面
+
+    将组件直接打包到页面的好处是减少了请求数，但它的问题就是增加了页面体积，同时可能存在一定的浏览器兼容性问题（这个问题现在已经较为不严重了）。
+    
+    所以事情是相对的，当这些组件较小的时候（而且重用机会不大的话），可以考虑将它们打包进网页。反之，就应该单独用一个文件来保存他们，然后在网页中进行引用。这个做法就好比，所有邮箱对于附件大小都是有所限制的，如果你要传输很大的附件，就只能采取将附件先放在网络上一个位置，然后在邮件中提供下载链接。（QQ邮箱在这方面做得相当的不错）。
